# faq-recommendations

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/.cursor/rules/: fastapi-best-practices.mdc
backend/app/: main.py
backend/app/config/: constants.py
backend/app/core/: models.py  semantic_engine.py
backend/app/db/: session.py
backend/app/db/repositories/: db_repository.py  gestion_repository.py  qdrant_repository.py
backend/app/routes/: gestion_routes.py  search_routes.py
backend/app/schemas/: base_schemas.py  gestion_schemas.py  search_schemas.py
backend/app/services/: gestion_service.py  search_service.py
backend/app/utils/: logger.py
backend/docs/: pdr_FAQ_management.md  pdr_FAQ_search.md
backend/qdrant_storage/: raft_state.json
chat_example/static/: style.css
data/processed/: Embeddings.csv
data/raw/: FAQ_example.txt
docs/: FAQ Recommendations.md  pdr_FAQ_management.md
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  app.py  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.cursor/rules/: frontend-developer.mdc  project-structure.mdc
frontend/docs/: PRD_Faq_Recommendations_Frontend.md  openapi.json  styling_guide.md
frontend/src/app/: error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/templates/: index.html
notebooks/: faq-recommendations.ipynb
src/: main.py
src/data/: Embeddings.csv
src/features/: functions.py  main.py
(+8 files in other folders)
